forgot password functionality and reset password functionality

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DB_URL=mongodb://localhost:27017/millMart
 SECRET=millMart@7811
+EMAIL_USER=bjvasu6747@gmail.com
+EMAIL_PASS=mveq vgja mbpd oxcu
+FRONTEND_URL=http://localhost:3045
