--- a/frontend/millMart/package.json
+++ b/frontend/millMart/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
+    "swiper": "^11.2.6",
     "validator": "^13.15.0"
   },
   "devDependencies": {
