--- a/frontend/millMart/package.json
+++ b/frontend/millMart/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.6",
     "validator": "^13.15.0"
   },
