--- a/frontend/millMart/vercel.json
+++ b/frontend/millMart/vercel.json
@@ -1,6 +1,12 @@
 {
   "builds": [
-    { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
   ],
   "routes": [
     { "src": "/(.*)", "dest": "/" }
